--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -4,20 +4,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <!--[if lt IE 9]>
-            <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        <link rel="shortcut icon" href="">
+        <link rel="stylesheet", href="/template/markdown-github.css">
+        <link rel="stylesheet", href="/template/custom.css">
+        <link rel="stylesheet"
+              href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+
         <script>
          document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
                         ':35729/livereload.js?snipver=1"></' + 'script>')
         </script>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mermaid/<%- mermaid_version %>/mermaid.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/<%- mermaid_version %>/mermaid.js"></script>
     </head>
     <body>
