--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -13,7 +13,7 @@
 
         <script>
          document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
-                        ':35729/livereload.js?snipver=1"></' + 'script>')
+                        ':<%- js_port %>/livereload.js?snipver=1"></' + 'script>')
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/<%- mermaid_version %>/mermaid.js"></script>
     </head>
