--- a/templates/index.ejs.html
+++ b/templates/index.ejs.html
@@ -16,6 +16,30 @@
                         ':<%- js_port %>/livereload.js?snipver=1"></' + 'script>')
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/<%- mermaid_version %>/mermaid.js"></script>
+
+        <script type="text/x-mathjax-config">
+         MathJax.Hub.Config({
+             extensions: [
+                 "MathMenu.js",
+                 "MathZoom.js",
+                 "AssistiveMML.js",
+                 "a11y/accessibility-menu.js"
+             ],
+             jax: ["input/TeX", "output/CommonHTML"],
+             TeX: {
+                 extensions: [
+                     "AMSmath.js",
+                     "AMSsymbols.js",
+                     "noErrors.js",
+                     "noUndefined.js",
+                 ]
+             }
+         });
+        </script>
+
+        <script type="text/javascript" async
+                src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+        </script>
     </head>
     <body>
         <%- contents %>
